--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
 	<!-- meta & title -->
 	<meta charset="UTF-8">
-	<meta name="description" content="Daan van Monsjou - Technology journalist at Tweakers">
+	<meta name="description" content="Daan van Monsjou - Technology editor at Tweakers">
 	<meta name="author" content="Daan van Monsjou">	
 	<meta name="keywords" content="Daan van Monsjou, technology journalist, tech, Tweakers">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'self' https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js averagenl.github.io github.com daanvanmonsjou.nl daanvanmonsjou.nl/script.js cdn.report-uri.com 'sha256-0EZqoz+oBhx7gF4nvY2bSqoGyy4zLjNF+SDQXGp/ZrY=' 'sha256-i2O4M2S6FF+Ju9WRdMKcnJcvf1uKw9643KxnmM74Dzk=' 'sha256-N5geL3yJqdgsYb0dCJ3UC1PiVLu196CJly3tQ/LwCBc=' 'sha256-ByOXYIXIkfNC3flUR/HoxR4Ak0pjOEF1q8XmtuIa6po=' daanvanmonsjou.nl/*  daanvanmonsjou.nl/script.js eff.org cdn.report-uri.com platform.twitter.com syndication.twitter.com cdn.syndication.twimg.com youtube.com https://static.doubleclick.net/instream/ad_status.js; frame-src datawrapper.dwcdn.net https://www.youtube.com/ twitter.com https://s.ytimg.com https://platform.twitter.com syndication.twitter.com cdn.syndication.twimg.com; child-src 'self' https://www.youtube.com/ https://s.ytimg.com; style-src 'self' daanvanmonsjou.nl/* daanvanmonsjou.nl/script.js https://daanvanmonsjou.nl/script.js 'sha256-0EZqoz+oBhx7gF4nvY2bSqoGyy4zLjNF+SDQXGp/ZrY=' 'sha256-i2O4M2S6FF+Ju9WRdMKcnJcvf1uKw9643KxnmM74Dzk=' 'sha256-N5geL3yJqdgsYb0dCJ3UC1PiVLu196CJly3tQ/LwCBc=' 'sha256-ByOXYIXIkfNC3flUR/HoxR4Ak0pjOEF1q8XmtuIa6po=' https://platform.twitter.com/css/ fonts.googleapis.com 'self'; font-src fonts.gstatic.com; object-src 'self'; img-src https: data:; script-src-elem 'self' daanvanmonsjou.nl/* daanvanmonsjou.nl/script.js 'sha256-sNINh+kurY8RLvJai+7ElQLjpy40s9I4LeVp32TcQ/o=' eff.org https://cdn.report-uri.com/libs/report-uri-js/1.0.1/report-uri-js.min.js https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js https://cdn.syndication.twimg.com/tweets.json https://platform.twitter.com/ 'sha256-0EZqoz+oBhx7gF4nvY2bSqoGyy4zLjNF+SDQXGp/ZrY=' 'sha256-i2O4M2S6FF+Ju9WRdMKcnJcvf1uKw9643KxnmM74Dzk=' 'sha256-N5geL3yJqdgsYb0dCJ3UC1PiVLu196CJly3tQ/LwCBc=' 'sha256-ByOXYIXIkfNC3flUR/HoxR4Ak0pjOEF1q8XmtuIa6po='; style-src-attr 'self' daanvanmonsjou.nl/* daanvanmonsjou.nl/script.js 'sha256-TSdVhERf7QyenIlQ77eiEVSvNjCg/FQ544mYSaRUgYw=' 'sha256-sNINh+kurY8RLvJai+7ElQLjpy40s9I4LeVp32TcQ/o=' 'sha256-0EZqoz+oBhx7gF4nvY2bSqoGyy4zLjNF+SDQXGp/ZrY=' 'sha256-i2O4M2S6FF+Ju9WRdMKcnJcvf1uKw9643KxnmM74Dzk=' 'sha256-N5geL3yJqdgsYb0dCJ3UC1PiVLu196CJly3tQ/LwCBc=' 'sha256-ByOXYIXIkfNC3flUR/HoxR4Ak0pjOEF1q8XmtuIa6po='; media-src 'self' https://www.youtube.com; upgrade-insecure-requests; connect-src daanvanmonsjou.report-uri.com; report-uri https://daanvanmonsjou.report-uri.com; frame-ancestors 'none'; base-uri 'self'; form-action 'none';">
-	<title>Daan van Monsjou - Technology Journalist at Tweakers</title>
+	<title>Daan van Monsjou - Technology Editor at Tweakers</title>
 	
 	<!-- style -->
 	<link href="stylesheet.css" rel="stylesheet">
@@ -28,10 +28,10 @@
         </div>
     </header>
     <main>
-	<h1>Daan van Monsjou -  Journalist at Tweakers</h1><br>
+	<h1>Daan van Monsjou -  Editor at Tweakers</h1><br>
         <section>
                 <h2>About Me</h2>
-                <p>I'm a technology journalist at Tweakers, where I write stories about semiconductors and PC hardware. Previously, I did two internships and freelance work at Tweakers. Before that, I wrote for British computer website OC3D, among others. 
+                <p>I'm a technology editor at Tweakers, where I write stories about semiconductors and PC hardware. Previously, I did two internships and freelance work at Tweakers. Before that, I wrote for British computer website OC3D, among others. 
 			<p>I've written stories about the <a href="https://tweakers.net/reviews/12082/tsmc-technology-symposium-2024-voorbij-de-2nm-en-chipstapels-op-waferschaal.html" target="_blank">technological strides at TSMC</a>, dived deep into <a href="https://tweakers.net/reviews/9058/chips-op-2nm-en-halfgeleiderallianties-de-eu-wil-haar-chipsector-versterken.html" target="_blank">the EU's chip ambitions</a>, covered <a href="https://tweakers.net/reviews/12732/pat-gelsinger-stopt-bij-worstelend-intel-plotseling-vertrek-van-ambitieuze-ceo.html" target="_blank">the situation at Intel</a> and interviewed <a href="https://tweakers.net/reviews/10832/cto-martin-van-den-brink-over-de-obstakels-naar-asmls-euv-alleenheerschappij.html" target="_blank">ASML's CTO, Martin van den Brink</a>.</p>
 			<p>Want to find out more? <a href="portfolio.html">View my portfolio</a> or my <a href="https://tweakers.net/crew/864/" target="_blank">profile on Tweakers</a>.</p><br>
         </section>
@@ -45,3 +45,4 @@
     </main>
 </body>
 </html>
+
