--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
 	<!-- meta & title -->
 	<meta charset="UTF-8">
-	<meta name="description" content="Daan van Monsjou - Technology Journalist at Tweakers">
+	<meta name="description" content="Daan van Monsjou - Technology Editor at Tweakers">
 	<meta name="author" content="Daan van Monsjou">	
 	<meta name="keywords" content="Daan van Monsjou, Technology Journalist, Tweakers">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -54,3 +54,4 @@
     </main>
 </body>
 </html>
+
